--- a/buscador.html
+++ b/buscador.html
@@ -95,7 +95,7 @@
     <h1>Resultados</h1>
     <div id="resultado"></div>
 
-    <script src="js/buscador.js"></script>
+    <script src="js/buscador.js" type="module"></script>
     
 </body>
 </html>
